<resources>
    <string name="app_name">Кот-Учёный</string>
    <string name="start">Начать</string>
    <string name="back">Назад</string>
    <string name="hello">Привет, я Кот-Учёный!Со мной ты можешь играть и учиться!</string>
    <string name="math_1">Сравни числа</string>
    <string name="logic">Убери лишнее</string>
    <string name="math_2">Выбери фигуру</string>
    <string name="rus_1">Гласные и согласные</string>
    <string name="rus_2">Звонкие и глухие</string>
    <string name="okr_mir"></string>
    <string name="ChooseLvl">Выбери уровень!</string>
    <string name="ChooseCtg">Выбери категорию!</string>
    <string name="task">Задание</string>
    <string name="Continue">Продолжить</string>
    <string name="category_1">Математика</string>
    <string name="category_2">Русский язык</string>
    <string name="category_3">Логика</string>
    <string name="category_4">Окружающий мир</string>
    <string name="circle">Круг</string>
    <string name="square">Квадрат</string>
    <string name="star">Звезда</string>
    <string name="triangle">Треугольник</string>
    <string name="heart">Сердце</string>
    <string name="rectangle">Прямоугольник</string>
    <string name="Math">Математика</string>
    <string name="vowel">Гласная</string>
    <string name="consonant">Согласная</string>
    <string name="sonorous">Звонкий</string>
    <string name="muffled">Глухой</string>
    <string name="world">Домашние и дикие животные</string>
    <string name="wild">Дикое</string>
    <string name="pet">Домашнее</string>
    <string name="Login">Войти</string>
    <string name="userName">Имя пользователя</string>
    <string name="yourName">Вводи своё имя и жми Войти</string>
    <string name="your_time">Время:</string>
    <string name="best_time">Лучшее время:</string>
    <string name="deletUserRec">Сбросить мои рекорды</string>
    <string name="openVid">Автор(Открыть в браузере)</string>
</resources>
