<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogfon"
    android:background="@drawable/style_dialog"
    android:layout_gravity="center"
    android:scaleType="centerCrop"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/award"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:srcCompat="@drawable/award" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_weight="1"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_time"
                android:id="@+id/your_time"
                android:padding="5dp"
                android:textColor="@color/colorPurp1"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                android:padding="5dp"
                android:id="@+id/time"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/colorPurp1"
                android:layout_marginTop="5dp"
                android:gravity="center">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_time"
                android:id="@+id/best_time"
                android:padding="5dp"
                android:textColor="@color/colorPurp1"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                android:padding="5dp"
                android:id="@+id/bestTime"
                android:textColor="@color/colorPurp1"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center">
            </TextView>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_weight="2"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textdescr"
            android:text="@string/lvl_end"
            android:layout_weight="20"
            android:textColor="@color/colorPurp1"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:gravity="center">
        </TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/butcont"
            android:background="@drawable/button_levels"
            android:layout_weight="10"
            android:text="@string/Continue"
            android:textColor="@color/colorPurp1"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:padding="10dp">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/deleteRec"
            android:background="@drawable/button_detete"
            android:layout_weight="10"
            android:text="@string/deletUserRec"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorPurp1"
            android:textStyle="bold"
            android:padding="10dp">

        </Button>


    </LinearLayout>

</LinearLayout>