<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/category_backgraund" />

    <LinearLayout
        android:id="@+id/box1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/box3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_backtoctg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_start"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/colorStart80"
                android:textSize="22dp"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/choooselvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cat"
                android:layout_width="146dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/cat" />

            <TextView
                android:id="@+id/chooselvl"
                android:layout_width="240dp"
                android:layout_height="42dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/choose_lvl"
                android:gravity="center"
                android:text="@string/ChooseLvl"
                android:textColor="@color/colorPurp1"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/box4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/logic"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:background="@drawable/button_levels"
                        android:gravity="center"
                        android:text="@string/logic"
                        android:textColor="@color/colorPurp1"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </ScrollView>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>