<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/main_backgraund">

    </ImageView>

    <TextView
        android:id="@+id/yourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/yourName"
        android:textColor="@color/colorPink"
        android:textSize="24dp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startLayout"
        android:layout_below="@+id/yourName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_start"
        android:hint="@string/userName"
        android:paddingLeft="20dp"
        android:textColor="@color/colorPink"
        android:textColorHint="@color/colorPinkDark"
        android:visibility="visible">
    </EditText>

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_levels"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/Login"
            android:textSize="20dp"
             />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_detete"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Удалить все рекорды"
            android:padding="10dp"
            android:textSize="15dp" />
    </LinearLayout>


</RelativeLayout>